css/cardslider.css
/* SOURCE: CodingNepal https://www.codingnepalweb.com/create-responsive-card-slider-html-javascript/ */

.slider-wrapper {
  overflow: hidden;
  max-width: 1200px;
  margin: 0 50px 50px;
}
.card-list .card-item {
  height: auto;
  color: #000000;
  user-select: none;
  padding: 35px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  backdrop-filter: blur(30px);
  background: #f3fbfd;
  border: 2px solid #caebf4;
}
.card-list .card-item .user-image {
  width: 150px;
  height: 150px;
  border-radius: 50%;
  border: 3px solid rgba(33, 128, 141, 1);
  padding: 4px;
  object-fit: cover;
}
.card-list .card-item .user-name {
  font-weight: 500;
  margin-top: 30px;
  margin-bottom: 10px;
}
.card-list .card-item .user-profession {
  text-align: center;
  font-size: 0.9rem;
  color: rgba(98, 108, 113, 1);
  margin-bottom: 20px;
}
.card-list .card-item .message-button {
  display: inline-flex;
  align-items: center;
  white-space: nowrap;
  gap: 0.5rem;
  margin-top: 10px;
  padding: 10px 35px;
  color: rgba(252, 252, 249, 1);
  border-radius: 6px;
  font-weight: 500;
  cursor: pointer;
  background: rgba(33, 128, 141, 1);
  border: 1px solid transparent;
  transition: 0.2s ease;
  text-decoration: none;
}
.card-list .card-item .message-button:hover {
  background: rgba(29, 116, 128, 1);
  border: 1px solid rgba(0, 0, 0, 1);
  color: rgba(0, 0, 0, 1);
}
.slider-wrapper .swiper-pagination-bullet {
  background: rgba(0, 0, 0, 1);
  height: 13px;
  width: 13px;
  opacity: 0.5;
}
.slider-wrapper .swiper-pagination-bullet-active {
  opacity: 1;
}
.slider-wrapper .swiper-slide-button {
  color: rgba(33, 128, 141, 1);
  margin-top: -55px;
  transition: 0.2s ease;
}
.slider-wrapper .swiper-slide-button:hover {
  color: rgba(29, 116, 128, 1);
}
@media (max-width: 768px) {
  .slider-wrapper {
    margin: 0 10px 40px;
  }
}

